--- a/landing.html
+++ b/landing.html
@@ -8,9 +8,15 @@
     <header>
       <h1>PlatziGames</h1><a class="boton">Registro</a>
     </header>
-    <h1>Título </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nesciunt delectus fugiat odit doloremque facilis eos soluta quae nulla tempore mollitia porro praesentium eveniet culpa fugit voluptas, corporis, harum saepe.</p>
-    <div><span>Leer</span></div>
-    <div><a>Boton 2</a></div>
+    <section class="intro"> 
+      <div class="intro__imagen"><img src="images/imagen.png"></div>
+      <div class="intro__contenido">
+        <h2>Título Principal</h2>
+        <p>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorum recusandae dolor perspiciatis exercitationem! Mollitia veritatis nihil, eum dolores eveniet earum laboriosam nisi blanditiis voluptatum molestias eius! <span>Assumenda, doloremque iure!</span>
+        </p>
+        <a class="boton">Leer más</a>
+      </div>
+    </section>
   </body>
 </html>
