--- a/landing.html
+++ b/landing.html
@@ -13,9 +13,7 @@
       <div class="intro__contenido">
         <h2>Título Principal</h2>
         <p>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorum recusandae dolor perspiciatis exercitationem! Mollitia veritatis nihil, eum dolores eveniet earum laboriosam nisi blanditiis voluptatum molestias eius! <span>Assumenda, doloremque iure!</span>
-        </p>
-        <a class="boton">Leer más</a>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorum recusandae dolor perspiciatis exercitationem! Mollitia veritatis nihil, eum dolores eveniet earum laboriosam nisi blanditiis voluptatum molestias eius! <span>Assumenda, doloremque iure!</span></p><a class="boton">Leer más</a>
       </div>
     </section>
   </body>
