--- a/landing.html
+++ b/landing.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h1>PlatziGames</h1><a class="boton">Registro</a>
+      <h1>PlatziGames</h1><a>Hola, David</a>
     </header>
     <section class="intro"> 
       <div class="intro__imagen"><img src="images/imagen.png"></div>
@@ -16,5 +16,11 @@
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorum recusandae dolor perspiciatis exercitationem! Mollitia veritatis nihil, eum dolores eveniet earum laboriosam nisi blanditiis voluptatum molestias eius! <span>Assumenda, doloremque iure!</span></p><a class="boton">Leer más</a>
       </div>
     </section>
+    <ul>
+      <li>Título Principal</li>
+      <li>Subtítulo 1</li>
+      <li>Subtítulo 2</li>
+      <li>Subtítulo 3</li>
+    </ul>
   </body>
 </html>
