--- a/landing.html
+++ b/landing.html
@@ -16,11 +16,28 @@
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorum recusandae dolor perspiciatis exercitationem! Mollitia veritatis nihil, eum dolores eveniet earum laboriosam nisi blanditiis voluptatum molestias eius! <span>Assumenda, doloremque iure!</span></p><a class="boton">Leer más</a>
       </div>
     </section>
-    <ul>
-      <li>Título Principal</li>
-      <li>Subtítulo 1</li>
-      <li>Subtítulo 2</li>
-      <li>Subtítulo 3</li>
-    </ul>
+    <main class="contenido">
+      <div class="caja">
+        <div class="caja__imagen"><img src="images/imagen.png"/></div>
+        <div class="caja__contenido">
+          <h3>Subtítulo 1</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><a class="boton">Leer más</a>
+        </div>
+      </div>
+      <div class="caja">
+        <div class="caja__imagen"><img src="images/imagen.png"/></div>
+        <div class="caja__contenido">
+          <h3>Subtítulo 2</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><a class="boton">Leer más</a>
+        </div>
+      </div>
+      <div class="caja">
+        <div class="caja__imagen"><img src="images/imagen.png"/></div>
+        <div class="caja__contenido">
+          <h3>Subtítulo 3</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><a class="boton">Leer más</a>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
