Add include line

--- a/landing.html
+++ b/landing.html
@@ -21,21 +21,21 @@
         <div class="caja__imagen"><img src="images/imagen.png"/></div>
         <div class="caja__contenido">
           <h3>Subtítulo 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><a class="boton">Leer más</a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
       <div class="caja">
         <div class="caja__imagen"><img src="images/imagen.png"/></div>
         <div class="caja__contenido">
           <h3>Subtítulo 2</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><a class="boton">Leer más</a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
       <div class="caja">
         <div class="caja__imagen"><img src="images/imagen.png"/></div>
         <div class="caja__contenido">
           <h3>Subtítulo 3</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><a class="boton">Leer más</a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
     </main>
