--- a/landing.html
+++ b/landing.html
@@ -39,5 +39,13 @@
         </div>
       </div>
     </main>
+    <footer>
+      <h1>Platzi Games</h1>
+      <ul>
+        <li>Acerca</li>
+        <li>Noticias</li>
+        <li>Contacto</li>
+      </ul>
+    </footer>
   </body>
 </html>
